--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 2cd05c22
-	trimbase = 
+	base = a3ec0e55
+	trimbase = 2cd05c22
 	parent = upstream
 	previous = e6b42958
