--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = b1bb318e
-	trimbase = 
+	base = 205f75c2
+	trimbase = b1bb318e
 	parent = upstream
 	previous = e6b42958
