--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = d19b1fa3
-	trimbase = 
+	base = 5faeb08f
+	trimbase = d19b1fa3
 	parent = upstream
 	previous = e6b42958
