--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 0b08ada0
-	trimbase = 
+	base = 7cb86188
+	trimbase = 0b08ada0
 	parent = upstream
 	previous = e6b42958
