--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = b1f5b276
-	trimbase = 
+	base = c27def39
+	trimbase = b1f5b276
 	parent = upstream
 	previous = e6b42958
