--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = c6214016
-	trimbase = 
+	base = a4e2b105
+	trimbase = c6214016
 	parent = upstream
 	previous = e6b42958
