--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 99cd68fd
-	trimbase = 
+	base = 60954958
+	trimbase = 99cd68fd
 	parent = upstream
 	previous = e6b42958
