--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = ca03febc
-	trimbase = 
+	base = 53db9785
+	trimbase = ca03febc
 	parent = upstream
 	previous = e6b42958
