--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 280f9095
-	trimbase = 
+	base = 57db2f4a
+	trimbase = 280f9095
 	parent = upstream
 	previous = e6b42958
