--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_msgs
-	base = b166ab9a
-	trimbase = 
+	base = 4d83051c
+	trimbase = b166ab9a
 	parent = upstream
 	previous = e6b42958
