--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 53db9785
+	base = 05a1c8ae
 	trimbase = 
 	parent = release/kinetic/visualization_msgs
-	previous = 
+	previous = 53db9785
