--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4bb7400
+	base = 4d040c8c
 	trimbase = 
 	parent = arch/kinetic/visualization_msgs
-	previous = 
+	previous = a4bb7400
