--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4e2b105
+	base = 210ec110
 	trimbase = 
 	parent = release/kinetic/sensor_msgs
-	previous = 
+	previous = a4e2b105
