--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b4cd02b0
+	base = 460c49d1
 	trimbase = 
 	parent = arch/kinetic/sensor_msgs
-	previous = 
+	previous = b4cd02b0
