--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 205f75c2
+	base = d98d088b
 	trimbase = 
 	parent = release/kinetic/shape_msgs
-	previous = 
+	previous = 205f75c2
