--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4093d7e7
+	base = e9eee66e
 	trimbase = 
 	parent = arch/kinetic/shape_msgs
-	previous = 
+	previous = 4093d7e7
