--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c27def39
+	base = 842d9857
 	trimbase = 
 	parent = release/kinetic/trajectory_msgs
-	previous = 
+	previous = c27def39
