--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a6c23b2
+	base = 324801a4
 	trimbase = 
 	parent = arch/kinetic/trajectory_msgs
-	previous = 
+	previous = 8a6c23b2
