--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7cb86188
+	base = 868be4b2
 	trimbase = 
 	parent = release/kinetic/actionlib_msgs
-	previous = 
+	previous = 7cb86188
