--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a5c68ed
+	base = da81c3b5
 	trimbase = 
 	parent = arch/kinetic/actionlib_msgs
-	previous = 
+	previous = 8a5c68ed
