--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 57db2f4a
+	base = f36c106c
 	trimbase = 
 	parent = release/kinetic/diagnostic_msgs
-	previous = 
+	previous = 57db2f4a
