--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65825c47
+	base = 0052b6dc
 	trimbase = 
 	parent = arch/kinetic/diagnostic_msgs
-	previous = 
+	previous = 65825c47
