--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4d83051c
+	base = b59a3b9b
 	trimbase = 
 	parent = release/kinetic/common_msgs
-	previous = 
+	previous = 4d83051c
