--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81032868
+	base = e39fe7fe
 	trimbase = 
 	parent = arch/kinetic/common_msgs
-	previous = 
+	previous = 81032868
