--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a3ec0e55
+	base = 5c4adfdb
 	trimbase = 
 	parent = release/kinetic/nav_msgs
-	previous = 
+	previous = a3ec0e55
