--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91f5ed86
+	base = 7a98aefc
 	trimbase = 
 	parent = arch/kinetic/nav_msgs
-	previous = 
+	previous = 91f5ed86
