--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60954958
+	base = e6b3f114
 	trimbase = 
 	parent = release/kinetic/geometry_msgs
-	previous = 
+	previous = 60954958
