--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 217d0d51
+	base = ba3e2634
 	trimbase = 
 	parent = arch/kinetic/geometry_msgs
-	previous = 
+	previous = 217d0d51
