--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5faeb08f
+	base = c4a67176
 	trimbase = 
 	parent = release/kinetic/stereo_msgs
-	previous = 
+	previous = 5faeb08f
