--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63a73f9c
+	base = 443cc6b4
 	trimbase = 
 	parent = arch/kinetic/stereo_msgs
-	previous = 
+	previous = 63a73f9c
