--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 05eb1144
-	trimbase = 
+	base = 39978fbb
+	trimbase = 05eb1144
 	parent = upstream
 	previous = e6b42958
