--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 06502783
-	trimbase = 
+	base = 832b3796
+	trimbase = 06502783
 	parent = upstream
 	previous = e6b42958
