--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 135557a0
-	trimbase = 
+	base = 9237152b
+	trimbase = 135557a0
 	parent = upstream
 	previous = e6b42958
