--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 17d6af94
-	trimbase = 
+	base = 37b6932a
+	trimbase = 17d6af94
 	parent = upstream
 	previous = e6b42958
