--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = f14cc74a
-	trimbase = 
+	base = 0086389b
+	trimbase = f14cc74a
 	parent = upstream
 	previous = e6b42958
