--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = fe90653e
-	trimbase = 
+	base = 5af8d942
+	trimbase = fe90653e
 	parent = upstream
 	previous = e6b42958
