--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 9bec1b46
-	trimbase = 
+	base = 1365a8d5
+	trimbase = 9bec1b46
 	parent = upstream
 	previous = e6b42958
