--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = a27a87c8
-	trimbase = 
+	base = fc062422
+	trimbase = a27a87c8
 	parent = upstream
 	previous = e6b42958
