--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 23b6d81f
-	trimbase = 
+	base = 8b851882
+	trimbase = 23b6d81f
 	parent = upstream
 	previous = e6b42958
