--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_msgs
-	base = 3c55df12
-	trimbase = 
+	base = 5344a2da
+	trimbase = 3c55df12
 	parent = upstream
 	previous = e6b42958
