--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8b851882
+	base = e972266b
 	trimbase = 
 	parent = release/lunar/diagnostic_msgs
-	previous = 
+	previous = 8b851882
