--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a9693d5
+	base = 2e5f4f09
 	trimbase = 
 	parent = arch/lunar/diagnostic_msgs
-	previous = 
+	previous = 8a9693d5
