--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 832b3796
+	base = c1e4be60
 	trimbase = 
 	parent = release/lunar/shape_msgs
-	previous = 
+	previous = 832b3796
