--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d3ba9f50
+	base = 137ba88a
 	trimbase = 
 	parent = arch/lunar/shape_msgs
-	previous = 
+	previous = d3ba9f50
