--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 39978fbb
+	base = aec7a5cd
 	trimbase = 
 	parent = release/lunar/nav_msgs
-	previous = 
+	previous = 39978fbb
