--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9586990e
+	base = 2a710213
 	trimbase = 
 	parent = arch/lunar/nav_msgs
-	previous = 
+	previous = 9586990e
