--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 37b6932a
+	base = 460708ca
 	trimbase = 
 	parent = release/lunar/actionlib_msgs
-	previous = 
+	previous = 37b6932a
