--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac565544
+	base = 2b3541ff
 	trimbase = 
 	parent = arch/lunar/actionlib_msgs
-	previous = 
+	previous = ac565544
