--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9237152b
+	base = 8f82dc7b
 	trimbase = 
 	parent = release/lunar/stereo_msgs
-	previous = 
+	previous = 9237152b
