--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80b7a512
+	base = 98ed7b2b
 	trimbase = 
 	parent = arch/lunar/stereo_msgs
-	previous = 
+	previous = 80b7a512
