--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc062422
+	base = 12d1982e
 	trimbase = 
 	parent = release/lunar/visualization_msgs
-	previous = 
+	previous = fc062422
