--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 27c5acad
+	base = 07be35b9
 	trimbase = 
 	parent = arch/lunar/visualization_msgs
-	previous = 
+	previous = 27c5acad
