--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5af8d942
+	base = b5509f40
 	trimbase = 
 	parent = release/lunar/sensor_msgs
-	previous = 
+	previous = 5af8d942
