--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c544a8a
+	base = 56c3456c
 	trimbase = 
 	parent = arch/lunar/sensor_msgs
-	previous = 
+	previous = 1c544a8a
