--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0086389b
+	base = fe657a01
 	trimbase = 
 	parent = release/lunar/trajectory_msgs
-	previous = 
+	previous = 0086389b
