--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b262377
+	base = f69a69b2
 	trimbase = 
 	parent = arch/lunar/trajectory_msgs
-	previous = 
+	previous = 9b262377
