--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1365a8d5
+	base = 4d573ef2
 	trimbase = 
 	parent = release/lunar/geometry_msgs
-	previous = 
+	previous = 1365a8d5
