--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55e5a25b
+	base = 0255940b
 	trimbase = 
 	parent = arch/lunar/geometry_msgs
-	previous = 
+	previous = 55e5a25b
