--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5344a2da
+	base = 17d460d9
 	trimbase = 
 	parent = release/lunar/common_msgs
-	previous = 
+	previous = 5344a2da
