--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72808150
+	base = b301fdd8
 	trimbase = 
 	parent = arch/lunar/common_msgs
-	previous = 
+	previous = 72808150
