--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 36b2dfbd
-	trimbase = 
+	base = a0a24e96
+	trimbase = 36b2dfbd
 	parent = upstream
 	previous = e6b42958
