--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = ee539779
-	trimbase = 
+	base = 3681d64d
+	trimbase = ee539779
 	parent = upstream
 	previous = e6b42958
