--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 5d77e36b
-	trimbase = 
+	base = b75f34d7
+	trimbase = 5d77e36b
 	parent = upstream
 	previous = e6b42958
