--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 8118d303
-	trimbase = 
+	base = bedb2caf
+	trimbase = 8118d303
 	parent = upstream
 	previous = e6b42958
