--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 1d76100e
-	trimbase = 
+	base = 96ca1088
+	trimbase = 1d76100e
 	parent = upstream
 	previous = e6b42958
