--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = bff7edeb
-	trimbase = 
+	base = 046362f8
+	trimbase = bff7edeb
 	parent = upstream
 	previous = e6b42958
