--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = ff4a5f06
-	trimbase = 
+	base = c7d515e1
+	trimbase = ff4a5f06
 	parent = upstream
 	previous = e6b42958
