--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 2a83f9d0
-	trimbase = 
+	base = 93d4c513
+	trimbase = 2a83f9d0
 	parent = upstream
 	previous = e6b42958
