--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = f219cd46
-	trimbase = 
+	base = c37245d6
+	trimbase = f219cd46
 	parent = upstream
 	previous = e6b42958
