--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_msgs
-	base = 9c50be4f
-	trimbase = 
+	base = 2d188d89
+	trimbase = 9c50be4f
 	parent = upstream
 	previous = e6b42958
