--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c7d515e1
+	base = aa6865aa
 	trimbase = 
 	parent = release/melodic/geometry_msgs
-	previous = 
+	previous = c7d515e1
