--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 993452da
+	base = eee8c513
 	trimbase = 
 	parent = arch/melodic/geometry_msgs
-	previous = 
+	previous = 993452da
