--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 93d4c513
+	base = 5a0c4810
 	trimbase = 
 	parent = release/melodic/visualization_msgs
-	previous = 
+	previous = 93d4c513
