--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a083365b
+	base = df915e3a
 	trimbase = 
 	parent = arch/melodic/visualization_msgs
-	previous = 
+	previous = a083365b
