--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c37245d6
+	base = 1386ef4f
 	trimbase = 
 	parent = release/melodic/diagnostic_msgs
-	previous = 
+	previous = c37245d6
