--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05c151b2
+	base = e73b6283
 	trimbase = 
 	parent = arch/melodic/diagnostic_msgs
-	previous = 
+	previous = 05c151b2
