--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d188d89
+	base = 3d1256c5
 	trimbase = 
 	parent = release/melodic/common_msgs
-	previous = 
+	previous = 2d188d89
