--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a0aa78d7
+	base = 577073d2
 	trimbase = 
 	parent = arch/melodic/common_msgs
-	previous = 
+	previous = a0aa78d7
