--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a0a24e96
+	base = 2358fefb
 	trimbase = 
 	parent = release/melodic/nav_msgs
-	previous = 
+	previous = a0a24e96
