--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec921fe0
+	base = 0f02c48a
 	trimbase = 
 	parent = arch/melodic/nav_msgs
-	previous = 
+	previous = ec921fe0
