--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3681d64d
+	base = 18935cdc
 	trimbase = 
 	parent = release/melodic/shape_msgs
-	previous = 
+	previous = 3681d64d
