--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c3f49fe9
+	base = 28780df7
 	trimbase = 
 	parent = arch/melodic/shape_msgs
-	previous = 
+	previous = c3f49fe9
