--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b75f34d7
+	base = b0aa7508
 	trimbase = 
 	parent = release/melodic/stereo_msgs
-	previous = 
+	previous = b75f34d7
