--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a3186218
+	base = 3c2ed35e
 	trimbase = 
 	parent = arch/melodic/stereo_msgs
-	previous = 
+	previous = a3186218
