--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bedb2caf
+	base = 31e7e4c7
 	trimbase = 
 	parent = release/melodic/actionlib_msgs
-	previous = 
+	previous = bedb2caf
