--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d8090b7
+	base = c4fc6c1a
 	trimbase = 
 	parent = arch/melodic/actionlib_msgs
-	previous = 
+	previous = 2d8090b7
