--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96ca1088
+	base = 9743e926
 	trimbase = 
 	parent = release/melodic/trajectory_msgs
-	previous = 
+	previous = 96ca1088
