--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0263254
+	base = aafae748
 	trimbase = 
 	parent = arch/melodic/trajectory_msgs
-	previous = 
+	previous = b0263254
