--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 046362f8
+	base = da1a1924
 	trimbase = 
 	parent = release/melodic/sensor_msgs
-	previous = 
+	previous = 046362f8
