--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da7b341b
+	base = d9a0cad7
 	trimbase = 
 	parent = arch/melodic/sensor_msgs
-	previous = 
+	previous = da7b341b
